# churn-detection

./: .gitignore  .gitlab-ci.yml  Projet_Churn.ipynb  README.md  activate.sh  pyproject.toml  pytest.ini  requirements.txt  setup.py
Notebooks/: Projet_1_-_EnoncA.docx  Projet_Churn.ipynb  test _ EM_donnees_manquantes.ipynb
Notebooks/data/: CAC 40 Historical Data.csv  IBEX 35 Historical Data.csv  customers.csv  harmonised_monthly_unemployment_rate_spain.csv  indicators.csv
churn/application/: main.py  main_inference.py  main_optimize.py  main_train.py
churn/config/: DummyChurnModel.pkl  config.py  config_template.yml  inference_template.yml  latest_model.yml
churn/domain/: bank_customers_dataset.py  churn_model.py  domain_utils.py  test_dataset.csv
churn/domain/models/: ChurnModelFinal.pkl
churn/infrastructure/: bank_customers.py
data/: CBOE Volatility Index Historical Data.csv  DAX Historical Data.csv  harmonised_monthly_unemployment_rate_france.csv  harmonised_monthly_unemployment_rate_germany.csv  inference_test_customers.csv  inference_test_indicators.csv
data/models/: ChurnModelFinal.pkl  ChurnModelSelection.pkl  DummyChurnModel.pkl
notebooks/: data_exploration.ipynb  model_interpretability.ipynb  model_selection.ipynb
test/: test_compute_features.py  test_domain_utils.py  test_model.py
