[tool.poetry]
name = "churn-sec"
version = "0.1.0"
description = "Detect churn from bank customers information"
authors = ["Salima, Emeric, Charles"]
readme = "README.md"
packages = [{include = "churn"}]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.2.0"
pandas = "^1.5.2"
interpret = "^0.3.0"
pyyaml = "^6.0"
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
